<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/muyClaro"
    tools:context=".Info_programador">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoName"
        android:layout_gravity="center"
        android:fontFamily="@font/pacifico_regular"
        android:textSize="30dp"
        style="@style/Widget.AppTheme.TextView.Titulos"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoTel"
        android:layout_gravity="center"
        android:fontFamily="@font/pacifico_regular"
        android:textSize="30dp"
        style="@style/Widget.AppTheme.TextView.Titulos"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoEscuela"
        android:layout_gravity="center"
        android:fontFamily="@font/pacifico_regular"
        android:textSize="30dp"
        style="@style/Widget.AppTheme.TextView.Titulos"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoCurso"
        android:layout_gravity="center"
        android:fontFamily="@font/pacifico_regular"
        android:textSize="30dp"
        style="@style/Widget.AppTheme.TextView.Titulos"
        />

    <Button
        android:id="@+id/btn_llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/muyFuerte"
        android:textColor="@color/muyClaro"
        android:textSize="20dp"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/btnLlamar"/>

</androidx.appcompat.widget.LinearLayoutCompat>