<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/muyClaro"
    tools:context=".Info_completa">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:fontFamily="@font/pacifico_regular"
        android:textSize="30dp"
        style="@style/Widget.AppTheme.TextView.Titulos"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/foto"
            android:clickable="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="2dp"
            android:src="@drawable/ic_baseline_add_a_photo_24" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginEnd="16dp"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxStrokeColor="@color/muyFuerte"
                app:hintTextColor="@color/muyFuerte"
                android:textColorHint="@color/muyFuerte"

                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ED_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipoArt"
                android:layout_marginEnd="16dp"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxStrokeColor="@color/muyFuerte"
                app:hintTextColor="@color/muyFuerte"
                android:textColorHint="@color/muyFuerte"
                app:endIconTint="@color/muyFuerte"

                app:hintAnimationEnabled="true">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/ED_arte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha"
                android:layout_marginEnd="16dp"

                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxStrokeColor="@color/muyFuerte"
                app:hintTextColor="@color/muyFuerte"
                android:textColorHint="@color/muyFuerte"
                app:placeholderText="@string/prefixFormDate"

                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ED_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"

        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"

        app:boxStrokeColor="@color/muyFuerte"
        app:hintTextColor="@color/muyFuerte"
        android:textColorHint="@color/muyFuerte"

        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ED_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="18"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/muyFuerte"
            android:textColor="@color/muyClaro"
            android:textSize="20dp"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/btnEliminar"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/muyFuerte"
            android:textColor="@color/muyClaro"
            android:textSize="20dp"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/btnEditar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>