<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/muyClaro"
    tools:context=".fragment_login">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico_regular"
            android:textSize="50dp"
            style="@style/Widget.AppTheme.TextView.Titulos"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:layout_marginTop="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:layout_margin="16dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/muyFuerte"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_iniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/muyFuerte"
            android:textColor="@color/muyClaro"
            android:textSize="20dp"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/btnIniciarsesion"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>