<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/muyClaro"
    tools:context=".fragment_createAccount">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:hint="@string/name"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidop"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_apellidop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_apellidom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confcontra"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeColor="@color/muyFuerte"
            app:hintTextColor="@color/muyFuerte"
            android:textColorHint="@color/muyFuerte"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/muyFuerte"

            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CA_confContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/muyFuerte"
            android:textColor="@color/muyClaro"
            android:textSize="20dp"
            android:fontFamily="@font/pacifico_regular"
            android:text="@string/btnCreaCuenta"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>